--- a/nueva.html
+++ b/nueva.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>BIENVENIDO</title>
+        <title>BIENVENIDO</title>ls
+        <link rel="stylesheet" href="css/body.css">
     </head>
     <body>
         <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
