correcciond de la pagina ademas de agregar estilos css

--- a/nueva.html
+++ b/nueva.html
@@ -4,8 +4,12 @@
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body>
-        <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
-        <P>Educacion hecha a tu medida dode quiereas 
-            y cuando quieras</P>
+        <div id="container">
+            <div id="post">
+                <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
+                 <P>Educacion hecha a tu medida dode quiereas 
+                    y cuando quieras</P>
+            </div>
+        </div>
     </body>
 </html>
