--- a/nueva.html
+++ b/nueva.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
                  <P>Educacion hecha a tu medida dode quiereas 
