Finalizada la cabecera con diseno naranja

--- a/nueva.html
+++ b/nueva.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                BIENVENIDO AL MUNDO DEL CINE 
             </div>
             <div id="post">
                 <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
