Agregado del contenido final

--- a/nueva.html
+++ b/nueva.html
@@ -9,6 +9,8 @@
                 <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
                  <P>Educacion hecha a tu medida dode quiereas 
                     y cuando quieras</P>
+                 <p>El cine como tal tiene sus inicios con la llegada
+                     de los metrajes de los hermanos lumiere </p>
             </div>
         </div>
     </body>
