--- a/nueva.html
+++ b/nueva.html
@@ -7,6 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 BIENVENIDO AL MUNDO DEL CINE 
+                A tu medida
             </div>
             <div id="post">
                 <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
