agregue suscripcion, cambio de cabecera maestra y color azul

--- a/nueva.html
+++ b/nueva.html
@@ -7,6 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 BIENVENIDO AL MUNDO DEL CINE 
+                Un mundo de ideas
             </div>
             <div id="post">
                 <h1>COMIENZA APRENDIENDO DE LOS MEJORES</h1>
@@ -14,6 +15,7 @@
                     y cuando quieras</P>
                  <p>El cine como tal tiene sus inicios con la llegada
                      de los metrajes de los hermanos lumiere </p>
+                 <p>Inicia ahora tu plan como quieras y donde quiereas</p>
             </div>
         </div>
     </body>
