--- a/nueva.html
+++ b/nueva.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>BIENVENIDO</title>
+        <title>BIENVENIDO A LA ESUCUELA DE CINE</title>
         <link rel="stylesheet" href="css/body.css">
     </head>
     <body>
