cambio que al parecer no salio bien pero mas tarde aprenderemos

--- a/nueva.html
+++ b/nueva.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="tagline" src="imagenes/dragon.png">
                 BIENVENIDO AL MUNDO DEL CINE 
                 A tu medida
             </div>
